--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "instawed",
   "author": "Gerald Yeo <gerald.yeo@gmail.com>",
-  "version": "0.0.2-33",
+  "version": "0.0.2-38",
   "description": "Node.js proof of concept of Instagram Realtime API",
   "main": "./app.js",
   "licenses": [
@@ -13,7 +13,8 @@
     "flatiron": ">=0.2.8",
     "union": "0.3.x",
     "socket.io": "0.9.x",
-    "instagram-node-lib": "0.0.9"
+    "instagram-node-lib": "0.0.9",
+    "ecstatic": "0.1.6"
   },
   "subdomain": "instawed",
   "engines": {
